// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wpp-inline-message should render component 1`] = `
<wpp-inline-message class="wpp-inline-message" exportparts="wrapper, message-icon, message, message-block">
  <mock:shadow-root>
    <div class="inline-message-wrapper size-s" part="wrapper">
      <div class="message-block tooltip-maxlength-auto" part="message-block">
        <span class="message" part="message"></span>
      </div>
    </div>
  </mock:shadow-root>
</wpp-inline-message>
`;

exports[`wpp-inline-message should render component with error message 1`] = `
<wpp-inline-message class="wpp-inline-message" exportparts="wrapper, message-icon, message, message-block" message="error message" message-type="error">
  <mock:shadow-root>
    <div class="inline-message-wrapper size-s" part="wrapper">
      <div class="message-block tooltip-maxlength-auto" part="message-block">
        <span class="message" part="message">
          error message
        </span>
      </div>
    </div>
  </mock:shadow-root>
</wpp-inline-message>
`;

exports[`wpp-inline-message should render component with info message 1`] = `
<wpp-inline-message class="wpp-inline-message" exportparts="wrapper, message-icon, message, message-block" message="information message" message-type="information">
  <mock:shadow-root>
    <div class="inline-message-wrapper size-s" part="wrapper">
      <div class="message-block tooltip-maxlength-auto" part="message-block">
        <span class="message" part="message">
          information message
        </span>
      </div>
    </div>
  </mock:shadow-root>
</wpp-inline-message>
`;

exports[`wpp-inline-message should render component with success message 1`] = `
<wpp-inline-message class="wpp-inline-message" exportparts="wrapper, message-icon, message, message-block" message="success message" message-type="success">
  <mock:shadow-root>
    <div class="inline-message-wrapper size-s" part="wrapper">
      <div class="message-block tooltip-maxlength-auto" part="message-block">
        <span class="message" part="message">
          success message
        </span>
      </div>
    </div>
  </mock:shadow-root>
</wpp-inline-message>
`;

exports[`wpp-inline-message should render component with warning message 1`] = `
<wpp-inline-message class="wpp-inline-message" exportparts="wrapper, message-icon, message, message-block" message="warning message" message-type="warning">
  <mock:shadow-root>
    <div class="inline-message-wrapper size-s" part="wrapper">
      <div class="message-block tooltip-maxlength-auto" part="message-block">
        <span class="message" part="message">
          warning message
        </span>
      </div>
    </div>
  </mock:shadow-root>
</wpp-inline-message>
`;
